Add a headless clipboard implementation, based off the TestClipboard.

This fixes a headless related clipboard crash, as headless used the aura
X11 clipboard under linux, but didn't initialize the X11 event source
like the clipboard expected.

TBR=klobag@chromium.org

BUG=697559

Review-Url: https://codereview.chromium.org/2739773003
Cr-Commit-Position: refs/heads/master@{#457643}

Former-commit-id: f7ccdfd34723ac939c80431e730fda34d948a119